--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
   <meta charset="UTF-8">
   <title>Support Fadi</title>
 
-  <!-- إعادة التوجيه الفوري -->
-  <meta http-equiv="refresh" content="0; url=https://www.gofundme.com/f/help-fadi-and-his-family-in-palestine/cl/s?lang=en_US&utm_campaign=fp_sharesheet&utm_content=amp13_c&utm_medium=customer&utm_source=copy_link&attribution_id=sl%3Ad07e838a-7fbd-4dfb-8307-c74f2e871d5d">
-
   <!-- بيانات معاينة الرابط -->
   <meta property="og:title" content="Help Fadi and His Family in Palestine" />
   <meta property="og:description" content="Support a Palestinian family during crisis. Click to help." />
-  <meta property="og:image" content="https://i.ibb.co/5Wgz3Htb/494570123-690921697135389-983404036877892751-n-1.jpg" />
+  <meta property="og:image" content="https://i.ibb.co/chkwGB88/494574778-1088633436190830-8947795024907894879-n.jpg" />
   <meta property="og:url" content="https://gofundm1e.neocities.org/" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -18,9 +15,25 @@
     body {
       margin: 0;
       background: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
     }
   </style>
+
+  <script>
+    // إعادة التوجيه الفوري باستخدام JavaScript
+    window.location.href = "https://www.gofundme.com/f/help-fadi-and-his-family-in-palestine/cl/s?lang=en_US&utm_campaign=fp_sharesheet&utm_content=amp13_c&utm_medium=customer&utm_source=copy_link&attribution_id=sl%3Ad07e838a-7fbd-4dfb-8307-c74f2e871d5d";
+  </script>
 </head>
 <body>
+  <a href="https://ibb.co/HTBCWSPP">
+    <img src="https://i.ibb.co/chkwGB88/494574778-1088633436190830-8947795024907894879-n.jpg" alt="Support Fadi" border="0">
+  </a>
 </body>
-                       </html>
+</html>
