--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Support Fadi</title>
 
   <!-- بيانات معاينة الرابط -->
-  <meta property="og:title" content="support Fadi and His Family in Palestine" />
+  <meta property="og:title" content="Help Fadi and His Family in Palestine" />
   <meta property="og:description" content="Support a Palestinian family during crisis. Click to help." />
-  <meta property="og:image" content="https://i.ibb.co/chkwGB88/494574778-1088633436190830-8947795024907894879-n.jpg" />
+  <meta property="og:image" content="رابط_الصورة_الجديدة" /> <!-- استبدل هذا الرابط بالرابط الجديد -->
   <meta property="og:url" content="https://gofundm1e.neocities.org/" />
   <meta name="twitter:card" content="summary_large_image" />
 
