--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Support Fadi</title>
 
   <!-- بيانات معاينة الرابط -->
-  <meta property="og:title" content="Help Fadi and His Family in Palestine" />
-  <meta property="og:description" content="Support a Palestinian family during crisis. Click to help." />
+  <meta property="og:title" content="Help Fadi and His Family" />
+  <meta property="og:description" content="Support family during crisis. Click to help." />
   <meta property="og:image" content="رابط_الصورة_الجديدة" /> <!-- استبدل هذا الرابط بالرابط الجديد -->
   <meta property="og:url" content="https://gofundm1e.neocities.org/" />
   <meta name="twitter:card" content="summary_large_image" />
