--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Support Fadi</title>
+  <title>Support Fadii</title>
 
   <!-- بيانات معاينة الرابط -->
-  <meta property="og:title" content="Help Fadi and His Family" />
-  <meta property="og:description" content="Support family during crisis. Click to help." />
-  <meta property="og:image" content="رابط_الصورة_الجديدة" /> <!-- استبدل هذا الرابط بالرابط الجديد -->
+  <meta property="og:title" content="support my Family" />
+  <meta property="og:description" content="Support my family during crisis. Click to help." />
+  <meta property="og:image" content="https://i.ibb.co/chkwGB88/494574778-1088633436190830-8947795024907894879-n.jpg" />
   <meta property="og:url" content="https://gofundm1e.neocities.org/" />
   <meta name="twitter:card" content="summary_large_image" />
 
