--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- بيانات معاينة الرابط -->
   <meta property="og:title" content="support my Family" />
   <meta property="og:description" content="Support my family during crisis. Click to help." />
-  <meta property="og:image" content="https://i.ibb.co/chkwGB88/494574778-1088633436190830-8947795024907894879-n.jpg" />
+  <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlxwe2c9AWEcLDGNbp3Kgs0P5YZlXWdK-V7A&s" />
   <meta property="og:url" content="https://gofundm1e.neocities.org/" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -33,7 +33,7 @@
 </head>
 <body>
   <a href="https://ibb.co/HTBCWSPP">
-    <img src="https://i.ibb.co/chkwGB88/494574778-1088633436190830-8947795024907894879-n.jpg" alt="Support Fadi" border="0">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlxwe2c9AWEcLDGNbp3Kgs0P5YZlXWdK-V7A&s" alt="Support Fadi" border="0">
   </a>
 </body>
 </html>
