--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Support Fadii</title>
+  <title>هاى1</title>
 
   <!-- بيانات معاينة الرابط -->
-  <meta property="og:title" content="support my Family" />
-  <meta property="og:description" content="Support my family during crisis. Click to help." />
+  <meta property="og:title" content="سبور" />
+  <meta property="og:description" content="فملى." />
   <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlxwe2c9AWEcLDGNbp3Kgs0P5YZlXWdK-V7A&s" />
   <meta property="og:url" content="https://gofundm1e.neocities.org/" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -33,7 +33,7 @@
 </head>
 <body>
   <a href="https://ibb.co/HTBCWSPP">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlxwe2c9AWEcLDGNbp3Kgs0P5YZlXWdK-V7A&s" alt="Support Fadi" border="0">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlxwe2c9AWEcLDGNbp3Kgs0P5YZlXWdK-V7A&s" alt="سبور" border="0">
   </a>
 </body>
 </html>
