--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- بيانات معاينة الرابط -->
   <meta property="og:title" content="Help Fade and his family." />
   <meta property="og:description" content="Help Fade and his family." />
-  <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlxwe2c9AWEcLDGNbp3Kgs0P5YZlXWdK-V7A&s" />
+  <meta property="og:image" content="https://i.ibb.co/rRcX4hcZ/IMG.jpg" />
   <meta property="og:url" content="https://gofundm1e.neocities.org/" />
   <meta name="twitter:card" content="summary_large_image" />
 
