--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- بيانات معاينة الرابط -->
   <meta property="og:title" content="Help Fade and his family." />
   <meta property="og:description" content="Help Fade and his family." />
-  <meta property="og:image" content="https://i.ibb.co/d0G95P9j/IMG.jpg" />
+  <meta property="og:image" content="https://i.ibb.co/Z6cLynt9/da1fe8dee2b34dc5b61f3f2bd54b88c8.gif" />
   <meta property="og:url" content="https://gofundm1e.neocities.org/" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -54,8 +54,8 @@
   </script>
 </head>
 <body>
-  <a href="https://i.ibb.co/d0G95P9j/IMG.jpg">
-    <img src="https://i.ibb.co/d0G95P9j/IMG.jpg" alt="Support Fadi's family" border="0">
+  <a href="https://i.ibb.co/Z6cLynt9/da1fe8dee2b34dc5b61f3f2bd54b88c8.gif">
+    <img src="https://i.ibb.co/Z6cLynt9/da1fe8dee2b34dc5b61f3f2bd54b88c8.gif" alt="Support Fadi's family" border="0">
   </a>
 </body>
 </html>
