--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- بيانات معاينة الرابط -->
   <meta property="og:title" content="Help Fade and his family." />
   <meta property="og:description" content="Help Fade and his family." />
-  <meta property="og:image" content="https://i.ibb.co/d0G95P9j/IMG.jpg" />
+  <meta property="og:image" content="https://i.ibb.co/Z6cLynt9/da1fe8dee2b34dc5b61f3f2bd54b88c8.gif" />
   <meta property="og:url" content="https://gofundm1e.neocities.org/" />
   <meta name="twitter:card" content="summary_large_image" />
 
